--- a/search.html
+++ b/search.html
@@ -6,13 +6,13 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-br from-pink-100 via-blue-100 to-purple-100 min-h-screen flex flex-col items-center p-6">
-  <h1 class="text-3xl font-bold mb-6 text-pink-700 drop-shadow">Search for your duties </h1>
+  <h1 class="text-3xl font-bold mb-6 text-pink-600 drop-shadow">Search 🔎 for your duties </h1>
 
   <div class="mb-8 flex gap-4 w-full max-w-xl">
     <input
       id="searchInput"
       type="text"
-      placeholder="Your name..."
+      placeholder="Your name... (e.g. Ronaldo)"
       class="border border-gray-300 rounded px-4 py-3 w-full text-lg focus:outline-none shadow-sm"
     />
     <button
@@ -23,7 +23,7 @@
 
   <div id="results" class="w-full max-w-5xl flex flex-col gap-6"></div>
 
-  <footer class="mt-12 text-sm text-gray-600 italic">Made by Sebastian</footer>
+  <footer class="mt-12 text-sm text-gray-600 italic">Made by TAN SEBASTIAN (belanja me 🧋)</footer>
 
   <script>
     const apiKey = "AIzaSyBsdyMrJW3RmU7hyYoHh6EpoC_cynXs_7c";
@@ -59,13 +59,13 @@
       // Just show the values with magnifying glass, no "Cell X" or count
 const leftItems = leftCells
   .reverse()
-  .map(val => `<li>🔍 ${val}</li>`)
+  .map(val => `<li>🔎 ${val}</li>`)
   .join("");
 
 
       card.innerHTML = `
         <h2 class="text-lg font-bold mb-1 text-gray-800">${sheetName}</h2>
-        <p class="text-sm"><strong>Found in:</strong> "${searchTerm}" in row ${rowIndex + 2}, column ${colIndex + 1}</p>
+        <p class="text-sm"><strong>:</strong> "row ${rowIndex + 2}, column ${colIndex + 1}</p>
         <p class="text-sm"><strong>Name:</strong> ${match}</p>
         <ul class="pl-4 list-disc mt-2 text-sm text-gray-700">
         
