--- a/search.html
+++ b/search.html
@@ -65,7 +65,7 @@ const leftItems = leftCells
 
       card.innerHTML = `
         <h2 class="text-lg font-bold mb-1 text-gray-800">${sheetName}</h2>
-        <p class="text-sm"><strong>:</strong> "row ${rowIndex + 2}, column ${colIndex + 1}</p>
+        <p class="text-xs"><strong>:</strong> row ${rowIndex + 2}, column ${colIndex + 1}</p>
         <p class="text-sm"><strong>Name:</strong> ${match}</p>
         <ul class="pl-4 list-disc mt-2 text-sm text-gray-700">
         
