--- a/search.html
+++ b/search.html
@@ -23,7 +23,7 @@
 
   <div id="results" class="w-full max-w-5xl flex flex-col gap-6"></div>
 
-  <footer class="mt-12 text-sm text-gray-600 italic">Made by TAN SEBASTIAN (belanja me 🍜)</footer>
+  <footer class="mt-12 text-sm text-gray-700 bold">Made by Tan Sebastian Poe Ryu (belanja me 🍜)</footer>
 
   <script>
     const apiKey = "AIzaSyBsdyMrJW3RmU7hyYoHh6EpoC_cynXs_7c";
