--- a/search.html
+++ b/search.html
@@ -12,7 +12,7 @@
     <input
       id="searchInput"
       type="text"
-      placeholder="Your name... (e.g. Ronaldo)"
+      placeholder="Your name... "
       class="border border-gray-300 rounded px-4 py-3 w-full text-lg focus:outline-none shadow-sm"
     />
     <button
