--- a/search.html
+++ b/search.html
@@ -23,7 +23,7 @@
 
   <div id="results" class="w-full max-w-5xl flex flex-col gap-6"></div>
 
-  <footer class="mt-12 text-sm text-gray-700 bold">Made by Tan Sebastian Poe Ryu (belanja me 🍜)</footer>
+  <footer class="mt-12 text-lg text-gray-700 bold">Made by Tan Sebastian Poe Ryu (belanja me 🍜)</footer>
 
   <script>
     const apiKey = "AIzaSyBsdyMrJW3RmU7hyYoHh6EpoC_cynXs_7c";
@@ -65,7 +65,7 @@ const leftItems = leftCells
 
       card.innerHTML = `
         <h2 class="text-lg font-bold mb-1 text-gray-800">${sheetName}</h2>
-        <p class="text-xs"><strong>:</strong> row ${rowIndex + 2}, column ${colIndex + 1}</p>
+        <p class="text-xs">row ${rowIndex + 2}, column ${colIndex + 1}</p>
         <p class="text-sm"><strong>Name:</strong> ${match}</p>
         <ul class="pl-4 list-disc mt-2 text-sm text-gray-700">
         
