--- a/search.html
+++ b/search.html
@@ -79,13 +79,22 @@
         .join("");
 
       card.innerHTML = `
-        <div class="flex justify-between items-center mb-2">
-          <h2 class="text-md font-bold text-gray-800">${sheetName}</h2>
-          <p class="text-sm text-gray-800">
-            <strong>Name:</strong> ${match}
-          </p>
-        </div>
-        <p class="text-xs mb-1">Row ${rowIndex + 2}, Column ${colIndex + 1}</p>
+
+<div class="flex justify-between items-center mb-2">
+  <h2 class="text-md font-bold text-gray-800">${sheetName}</h2>
+  
+  <!-- Right-aligned container for Name + Row/Column -->
+  <div class="flex flex-col text-right">
+    <p class="text-sm text-gray-800">
+      <strong>Name:</strong> ${match}
+    </p>
+    <p class="text-xs text-gray-600 mb-1">
+      Row ${rowIndex + 2}, Column ${colIndex + 1}
+    </p>
+  </div>
+</div>
+
+    
         <ul class="pl-4 list-disc text-sm text-gray-700">
           ${leftItems || "<li><em>None found</em></li>"}
         </ul>
@@ -101,7 +110,7 @@
       resultsDiv.innerHTML = "";
 
       if (!term) {
-        resultsDiv.innerHTML = `<div class="bg-yellow-100 text-yellow-700 p-3 rounded">Please enter a search term.</div>`;
+        resultsDiv.innerHTML = `<div class="bg-yellow-100 text-yellow-700 p-3 rounded">Please enter your name ⌛.</div>`;
         return;
       }
 
