--- a/search.html
+++ b/search.html
@@ -19,7 +19,7 @@
 <body class="bg-gradient-to-br from-pink-100 via-blue-100 to-purple-100 min-h-screen flex flex-col items-center p-4">
   <div class="container">
     <h1 class="text-2xl font-bold mb-4 text-pink-600 drop-shadow text-center">
-      Search 🔎 for your Cafeteria, Assembly and Latecomers duties (Not for Probies)
+      Search 🔎 for your Cafeteria, Assembly and Latecomers duties <p>(Not for Probies)</p>
     </h1>
 
     <!-- Only changed this section for a shorter input & bigger button -->
