--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@
   <div class="container">
  
 
-    <h1 class="text-2xl font-bold mb-4 text-pink-600 drop-shadow text-center">
+    <h1 class="text-xl font-bold mb-4 text-pink-600 drop-shadow text-center">
   Search 🔎 for your Cafeteria, Assembly and Latecomers duties 
   <span class="text-sm text-gray-600 font-normal">(Not for Probies)</span>
 </h1>
