--- a/search.html
+++ b/search.html
@@ -22,7 +22,7 @@
 
     <h1 class="text-xl font-bold mb-4 text-pink-600 drop-shadow text-center">
   Search 🔎 for your Cafeteria, Assembly and Latecomers duties 
-  <span class="text-sm text-gray-600 font-normal">(Not for Probies)</span>
+  <span class="text-lg text-gray-600 font-normal">(Not for Probies)</span>
 </h1>
 
 
