--- a/search.html
+++ b/search.html
@@ -21,8 +21,8 @@
  
 
     <h1 class="text-xl font-bold mb-4 text-pink-600 drop-shadow text-center">
-  Search 🔎 for your Cafeteria, Assembly and Latecomers duties 
-  <span class="text-lg text-gray-600 font-normal">(Not for Probies)</span>
+  Search 🔎 for your duties 
+  <span class="text-lg text-gray-600 font-normal">Cafeteria, Assembly and Latecomers (Not for Probies)</span>
 </h1>
 
 
