--- a/search.html
+++ b/search.html
@@ -8,11 +8,11 @@
     /* Helps ensure we don't exceed mobile widths */
     .container {
       max-width: 480px; /* approximate phone-friendly width */
-      width: 90%;
+      width: 100%;
     }
     /* Make everything a bit smaller for less scrolling */
     body {
-      font-size: 0.90rem; /* slightly smaller base font */
+      font-size: 0.93rem; /* slightly smaller base font */
     }
   </style>
 </head>
@@ -21,8 +21,8 @@
  
 
     <h1 class="text-xl font-bold mb-4 text-pink-600 drop-shadow text-center">
-  Search 🔎 for your duties 
-  <span class="text-lg text-gray-600 font-normal">Cafeteria, Assembly and Latecomers (Not for Probies)</span>
+  Search 🔎 for your duties (Cafe, Assembly, Latecomers)
+  <span class="text-lg text-gray-600 font-normal">(Not for Probies)</span>
 </h1>
 
 
