--- a/search.html
+++ b/search.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
   <meta charset="utf-8" />
   <title>Prefect Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
