--- a/search.html
+++ b/search.html
@@ -52,8 +52,8 @@
   </div>
 
   <script>
-    const apiKey = "AIzaSy...";
-    const sheetId = "1BsGqMhxwT...";
+    const apiKey = "AIzaSyBsdyMrJW3RmU7hyYoHh6EpoC_cynXs_7c";
+    const sheetId = "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo";
     const sheetConfigs = [
       { name: "ONSITE - CAFETERIA (A)", range: "A1:J1000", left: 3, color: 'border-pink-400 bg-pink-50' },
       { name: "ONSITE - CAFETERIA (B)", range: "A1:J1000", left: 3, color: 'border-green-400 bg-green-50' },
