--- a/search.html
+++ b/search.html
@@ -14,7 +14,7 @@
     }
     /* Make everything a bit smaller for less scrolling */
     body {
-      font-size: 0.93rem; /* slightly smaller base font */
+      font-size: 0.92rem; /* slightly smaller base font */
     }
   </style>
 </head>
@@ -23,8 +23,8 @@
  
 
     <h1 class="text-xl font-bold mb-4 text-pink-600 drop-shadow text-center">
-  Search 🔎 for your duties (Cafe, Assembly, Latecomers)
-  <span class="text-lg text-gray-600 font-normal">(Not for Probies)</span>
+  Search for your duties (Cafe, Assembly, Latecomers) 
+  <span class="text-lg text-gray-600 font-normal">🔎  (Not for Probies)</span>
 </h1>
 
 
