--- a/search.html
+++ b/search.html
@@ -36,12 +36,21 @@
         placeholder="Your name..."
         class="border border-gray-300 rounded px-2 py-2 text-base focus:outline-none shadow-sm w-48"
       />
+
       <button
-        id="searchBtn"
-        class="bg-pink-500 text-white px-6 py-3 text-lg rounded shadow hover:bg-pink-600"
-      >
-        Search
-      </button>
+  id="searchBtn"
+  class="
+    bg-gradient-to-r from-purple-500 to-purple-600
+    text-white px-6 py-3 text-lg rounded shadow
+    transition-transform duration-300 ease-in-out
+    hover:scale-105 hover:shadow-xl
+    animate-pulse
+  "
+>
+  Search
+</button>
+
+  
     </div>
 
     <div id="results" class="flex flex-col gap-4"></div>
