--- a/search.html
+++ b/search.html
@@ -56,9 +56,12 @@
     <div id="results" class="flex flex-col gap-4"></div>
 
     <footer class="mt-8 text-center text-base text-gray-700 font-bold">
-      Made by Tan Sebastian Poe Ryu (belanja me 🍜)
-    </footer>
-  </div>
+  Made by Tan Sebastian Poe Ryu (belanja me 🍜)
+  <p class="mt-2 text-sm text-gray-500 font-normal">
+    Tip: Search using your unique name, remember to scroll down to see the whole list & use at your own discretion (pls tell admin not to make last minute changes 🤲)
+  </p>
+</footer>
+
 
   <script>
     const apiKey = "AIzaSyBsdyMrJW3RmU7hyYoHh6EpoC_cynXs_7c";
