--- a/search.html
+++ b/search.html
@@ -56,7 +56,10 @@
     <div id="results" class="flex flex-col gap-4"></div>
 
     <footer class="mt-8 text-center text-base text-gray-700 font-italic">
-  Made by Tan Sebastian Poe Ryu (belanja me 🍜)
+  Made by Tan Sebastian Poe Ryu© 
+       <p class="mt-2 text-sm text-gray-500 font-bold">
+   Updated on : 
+  </p>
   <p class="mt-2 text-sm text-gray-500 font-normal">
     Tip: Search using your unique name, remember to scroll down to see the whole list & use at your own discretion (pls tell admin not to make last minute changes 🤲). If you see incomplete data that means the main dutysheet is incomplete as well. I welcome any improvement feedbacks.
   </p>
