--- a/search.html
+++ b/search.html
@@ -58,7 +58,7 @@
     <footer class="mt-8 text-center text-base text-gray-700 font-italic">
   Made by Tan Sebastian Poe Ryu© 
        <p class="mt-2 text-sm text-gray-500 font-bold">
-   Updated on : 
+   Updated on : 9 April 2025
   </p>
   <p class="mt-2 text-sm text-gray-500 font-normal">
     Tip: Search using your unique name, remember to scroll down to see the whole list & use at your own discretion (pls tell admin not to make last minute changes 🤲). If you see incomplete data that means the main dutysheet is incomplete as well. I welcome any improvement feedbacks.
