--- a/search.html
+++ b/search.html
@@ -18,7 +18,7 @@
     }
   </style>
 </head>
-<body class="bg-gradient-to-br from-pink-100 via-blue-100 to-purple-100 min-h-screen flex flex-col items-center p-4 pt-6">
+<body class="bg-gradient-to-br from-pink-80 via-blue-100 to-purple-100 min-h-screen flex flex-col items-center p-4 pt-6">
   <div class="container">
  
 
@@ -40,7 +40,7 @@
       <button
   id="searchBtn"
   class="
-    bg-gradient-to-r from-purple-500 to-purple-600
+    bg-gradient-to-r from-purple-500 to-blue-700
     text-white px-6 py-3 text-lg rounded shadow
     transition-transform duration-300 ease-in-out
     hover:scale-105 hover:shadow-xl
@@ -55,9 +55,9 @@
 
     <div id="results" class="flex flex-col gap-4"></div>
 
-    <footer class="mt-8 text-center text-base text-gray-700 font-italic">
+    <footer class="mt-7 text-center text-base text-gray-700 font-italic">
   Made by Tan Sebastian Poe Ryu© 
-       <p class="mt-2 text-sm text-gray-500 font-bold">
+       <p class="mt-2 text-sm text-gray-800 font-bold">
    Updated on : 9 April 2025
   </p>
   <p class="mt-2 text-sm text-gray-500 font-normal">
