--- a/search.html
+++ b/search.html
@@ -55,7 +55,7 @@
 
     <div id="results" class="flex flex-col gap-4"></div>
 
-    <footer class="mt-7 text-center text-base text-gray-700 font-italic">
+    <footer class="mt-7 text-center text-sm text-gray-700 font-italic">
   Made by Tan Sebastian Poe Ryu© 
        <p class="mt-2 text-sm text-gray-800 font-bold">
    Updated on : 9 April 2025
