--- a/search.html
+++ b/search.html
@@ -55,14 +55,15 @@
 
     <div id="results" class="flex flex-col gap-4"></div>
 
-    <footer class="mt-7 text-center text-sm text-gray-700 font-italic">
-  Made by Tan Sebastian Poe Ryu© 
-       <p class="mt-2 text-sm text-gray-800 font-bold">
+    <footer class="mt-2 text-sm text-gray-800 font-bold">
    Updated on : 9 April 2025
-  </p>
+     
   <p class="mt-2 text-sm text-gray-500 font-normal">
     Tip: Search using your unique name, remember to scroll down to see the whole list & use at your own discretion (pls tell admin not to make last minute changes 🤲). If you see incomplete data that means the main dutysheet is incomplete as well. I welcome any improvement feedbacks.
   </p>
+        <p class="mt-7 text-center text-sm text-gray-700 font-normal">
+ An Initiative by Tan Sebastian Poe Ryu© 2 Aristotle
+        </p>
 </footer>
 
 
