--- a/search.html
+++ b/search.html
@@ -23,8 +23,8 @@
  
 
     <h1 class="text-xl font-bold mb-4 text-pink-600 drop-shadow text-center">
-  Search for your duties (Cafe, Assembly, Latecomers) 
-  <span class="text-lg text-gray-600 font-normal">🔎  (Not for Probies)</span>
+  🔎 Prefect Duties Search (Cafe, Assembly, Latecomers) 
+  <span class="text-lg text-gray-600 font-normal">  (⛔ Not for Probies)</span>
 </h1>
 
 
