--- a/search.html
+++ b/search.html
@@ -16,24 +16,34 @@
     }
 
     /* ✨ Shiny text animation */
-    .shine {
-      background: linear-gradient(90deg, #aaa, #fff, #aaa);
-      background-size: 200% auto;
-      color: transparent;
-      background-clip: text;
-      -webkit-background-clip: text;
-      animation: shine 2.5s linear infinite;
-    }
 
-    @keyframes shine {
-      0% {
-        background-position: 200% center;
-      }
-      100% {
-        background-position: -200% center;
-      }
+    <style>
+  .shine {
+    background: linear-gradient(
+      90deg,
+      #d1c4e9,  /* lavender-silver */
+      #ffffff,  /* bright gleam */
+      #b39ddb,  /* soft purple */
+      #ffffff,  /* bright gleam again */
+      #d1c4e9   /* back to lavender-silver */
+    );
+    background-size: 250% auto;
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    animation: shine 3s linear infinite;
+  }
+
+  @keyframes shine {
+    0% {
+      background-position: 200% center;
     }
-  </style>
+    100% {
+      background-position: -200% center;
+    }
+  }
+</style>
+
 </head>
 <body class="bg-gradient-to-br from-pink-100 via-blue-100 to-purple-100 min-h-screen flex flex-col items-center p-4 pt-6">
   <div class="container">
