--- a/search.html
+++ b/search.html
@@ -40,7 +40,7 @@
       background-position: -200% center;
     }
   }
-
+  </style>
 </head>
 <body class="bg-gradient-to-br from-pink-100 via-blue-100 to-purple-100 min-h-screen flex flex-col items-center p-4 pt-6">
   <div class="container">
