--- a/search.html
+++ b/search.html
@@ -21,7 +21,7 @@
       90deg,
       #d1c4e9,  /* lavender-silver */
       #ffffff,  /* bright gleam */
-      #b39ddb,  /* soft purple */
+     #8865c6,  /* soft purple */
       #ffffff,  /* bright gleam again */
       #d1c4e9   /* back to lavender-silver */
     );
