--- a/search.html
+++ b/search.html
@@ -20,8 +20,8 @@
     background: linear-gradient(
       90deg,
       #d1c4e9,  /* lavender-silver */
-      #ffffff,  /* bright gleam */
-     #8865c6,  /* soft purple */
+      #fcfcfc,  /* bright gleam */
+     #8865c6,  /* purple */
       #ffffff,  /* bright gleam again */
       #d1c4e9   /* back to lavender-silver */
     );
@@ -29,7 +29,7 @@
     color: transparent;
     background-clip: text;
     -webkit-background-clip: text;
-    animation: shine 3s linear infinite;
+    animation: shine 5s linear infinite;
   }
 
   @keyframes shine {
