--- a/search.html
+++ b/search.html
@@ -21,15 +21,15 @@
       90deg,
       #d1c4e9,  /* lavender-silver */
       #fcfcfc,  /* bright gleam */
-     #8865c6,  /* purple */
+     #800080,  /* purple */
       #ffffff,  /* bright gleam again */
-      #d1c4e9   /* back to lavender-silver */
+     #c3b1e2   /* back to lavender-silver */
     );
     background-size: 250% auto;
     color: transparent;
     background-clip: text;
     -webkit-background-clip: text;
-    animation: shine 5s linear infinite;
+    animation: shine 8s linear infinite;
   }
 
   @keyframes shine {
