--- a/search.html
+++ b/search.html
@@ -22,7 +22,7 @@
       #d1c4e9,  /* lavender-silver */
       #fcfcfc,  /* bright gleam */
      #800080,  /* purple */
-      #ffffff,  /* bright gleam again */
+     #ffffa1,  /* bright gleam again */
      #c3b1e2   /* back to lavender-silver */
     );
     background-size: 250% auto;
