--- a/search.html
+++ b/search.html
@@ -90,7 +90,7 @@
       const sheetConfigs = [
         { name: "ONSITE - LATECOMERS", range: "A1:N1000", left: 5, color: 'border-purple-400 bg-purple-50' },
         { name: "ONSITE - ASSEMBLY", range: "A1:N1000", left: 5, color: 'border-blue-400 bg-blue-50' },
-        { name: "ONSITE - CAFETERIA (A)", range: "A1:J1000", left: 3, color: 'border-pink-400 bg-pink-50' },
+        { name: "ONSITE - CAFETERIA (A)", range: "A1:J1000", left: 3, color: 'border-orange-400 bg-orange-50' },
         { name: "ONSITE - CAFETERIA (B)", range: "A1:J1000", left: 3, color: 'border-green-400 bg-green-50' },
       ];
 
