--- a/search.html
+++ b/search.html
@@ -88,10 +88,10 @@
       const apiKey = "AIzaSyBsdyMrJW3RmU7hyYoHh6EpoC_cynXs_7c";
       const sheetId = "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo";
       const sheetConfigs = [
-        { name: "ONSITE - LATECOMERS", range: "A1:N1000", left: 5, color: 'border-purple-400 bg-purple-50' },
-        { name: "ONSITE - ASSEMBLY", range: "A1:N1000", left: 5, color: 'border-blue-400 bg-blue-50' },
-        { name: "ONSITE - CAFETERIA (A)", range: "A1:J1000", left: 3, color: 'border-orange-400 bg-orange-50' },
-        { name: "ONSITE - CAFETERIA (B)", range: "A1:J1000", left: 3, color: 'border-green-400 bg-green-50' },
+        { name: "ONSITE - LATECOMERS", range: "A1:N1000", left: 5, color: 'border-purple-300 bg-purple-50' },
+        { name: "ONSITE - ASSEMBLY", range: "A1:N1000", left: 5, color: 'border-blue-300 bg-blue-50' },
+        { name: "ONSITE - CAFETERIA (A)", range: "A1:J1000", left: 3, color: 'border-orange-300 bg-orange-50' },
+        { name: "ONSITE - CAFETERIA (B)", range: "A1:J1000", left: 3, color: 'border-yellow-300 bg-yellow-50' },
       ];
 
       async function fetchSheet(sheetName, range) {
