--- a/search.html
+++ b/search.html
@@ -90,7 +90,7 @@
       const sheetConfigs = [
         { name: "ONSITE - LATECOMERS", range: "A1:N1000", left: 5, color: 'border-purple-300 bg-purple-50' },
         { name: "ONSITE - ASSEMBLY", range: "A1:N1000", left: 5, color: 'border-blue-300 bg-blue-50' },
-        { name: "ONSITE - CAFETERIA (A)", range: "A1:J1000", left: 3, color: 'border-orange-300 bg-orange-50' },
+        { name: "ONSITE - CAFETERIA (A)", range: "A1:J1000", left: 3, color: 'border-orange-300 bg-brown-50' },
         { name: "ONSITE - CAFETERIA (B)", range: "A1:J1000", left: 3, color: 'border-yellow-300 bg-yellow-50' },
       ];
 
