--- a/search.html
+++ b/search.html
@@ -14,41 +14,37 @@
     body {
       font-size: 0.92rem;
     }
+
     .sparkle {
-  animation: sparkle 1.5s infinite alternate;
-  box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.6);
-}
-
-@keyframes sparkle {
-  0% { filter: brightness(1); }
-  100% { filter: brightness(1.3); }
-}
-
-
-    /* ✨ Shiny text animation */
-  .shine {
-    background: linear-gradient(
-      90deg,
-      #fcfcfc,  /* bright gleam */
-     #800080,  /* purple */
-     #ffffa1,  /* bright gleam again */
-     #c3b1e2   /* back to lavender-silver */
-    );
-    background-size: 250% auto;
-    color: transparent;
-    background-clip: text;
-    -webkit-background-clip: text;
-    animation: shine 4s linear infinite;
-  }
-
-  @keyframes shine {
-    0% {
-      background-position: 200% center;
+      animation: sparkle 1.5s infinite alternate;
+      box-shadow: 0 0 20px 4px rgba(255, 255, 255, 0.8), 0 0 8px 2px #ff00ff;
+      border-color: gold !important;
     }
-    100% {
-      background-position: -200% center;
+
+    @keyframes sparkle {
+      0% { filter: brightness(1); transform: scale(1); }
+      100% { filter: brightness(1.4); transform: scale(1.02); }
     }
-  }
+
+    .shine {
+      background: linear-gradient(
+        90deg,
+        #fcfcfc,
+        #800080,
+        #ffffa1,
+        #c3b1e2
+      );
+      background-size: 250% auto;
+      color: transparent;
+      background-clip: text;
+      -webkit-background-clip: text;
+      animation: shine 4s linear infinite;
+    }
+
+    @keyframes shine {
+      0% { background-position: 200% center; }
+      100% { background-position: -200% center; }
+    }
   </style>
 </head>
 <body class="bg-gradient-to-br from-pink-100 via-blue-100 to-purple-100 min-h-screen flex flex-col items-center p-4 pt-6">
@@ -83,127 +79,136 @@
 
     <footer class="mt-2 text-sm text-gray-800 font-bold">
       <p id="updatedDate" class="mt-2 text-sm text-gray-800 font-bold">
-  Updated on : 9 April 2025
-</p>
+        Updated on : 9 April 2025
+      </p>
 
-      
       <p class="mt-2 text-sm text-gray-500 font-normal">
         Tip: Search using your unique name, remember to scroll down to see the whole list & use at your own discretion (pls tell admin not to make last minute changes 🤲). If you see incomplete data that means the main dutysheet is incomplete as well. I welcome any improvement feedbacks.
       </p>
 
-      <!-- ✨ Shiny animated footer line -->
       <p class="mt-7 text-center text-sm font-semibold shine">
         An Initiative by Tan Sebastian Poe Ryu© 2 Aristotle
       </p>
     </footer>
 
-<script>
-  const apiKey = "AIzaSyBsdyMrJW3RmU7hyYoHh6EpoC_cynXs_7c";
-  const sheetId = "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo";
-  const sheetConfigs = [
-    { name: "ONSITE - LATECOMERS", range: "A1:N1000", left: 5, color: 'border-purple-300 bg-purple-50' },
-    { name: "ONSITE - ASSEMBLY", range: "A1:N1000", left: 5, color: 'border-blue-300 bg-blue-50' },
-    { name: "ONSITE - CAFETERIA (A)", range: "A1:J1000", left: 3, color: 'border-red-300 bg-red-50' },
-    { name: "ONSITE - CAFETERIA (B)", range: "A1:J1000", left: 3, color: 'border-yellow-300 bg-yellow-50' },
-  ];
+    <script>
+      const apiKey = "AIzaSyBsdyMrJW3RmU7hyYoHh6EpoC_cynXs_7c";
+      const sheetId = "1BsGqMhxwTGWzycOJmiKgmkDRN2Sb6QOyODCpjiVUDVo";
+      const sheetConfigs = [
+        { name: "ONSITE - LATECOMERS", range: "A1:N1000", left: 5, color: 'border-purple-300 bg-purple-50' },
+        { name: "ONSITE - ASSEMBLY", range: "A1:N1000", left: 5, color: 'border-blue-300 bg-blue-50' },
+        { name: "ONSITE - CAFETERIA (A)", range: "A1:J1000", left: 3, color: 'border-red-300 bg-red-50' },
+        { name: "ONSITE - CAFETERIA (B)", range: "A1:J1000", left: 3, color: 'border-yellow-300 bg-yellow-50' },
+      ];
 
-  function getUpdatedMonth() {
-    const updatedText = document.getElementById("updatedDate").innerText;
-    const monthMatch = updatedText.match(/(\d+)\s+([A-Za-z]+)\s+\d{4}/);
-    return monthMatch ? monthMatch[2].toLowerCase() : null;
-  }
-
-  async function fetchSheet(sheetName, range) {
-    const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${encodeURIComponent(sheetName + '!' + range)}?key=${apiKey}`;
-    const res = await fetch(url);
-    if (!res.ok) throw new Error(`Failed to load ${sheetName}`);
-    const json = await res.json();
-    return json.values?.slice(1) || [];
-  }
-
-  function getMergedSafeValue(row, colIndex) {
-    for (let r = row; r >= 0; r--) {
-      if (cachedData[r] && cachedData[r][colIndex]) {
-        return cachedData[r][colIndex];
+      function getUpdatedMonth() {
+        const updatedText = document.getElementById("updatedDate").innerText;
+        const match = updatedText.match(/(\d+)\s+([A-Za-z]+)\s+\d{4}/);
+        return match ? match[2].toLowerCase() : null;
       }
-    }
-    return "";
-  }
 
-  function createCard(sheetName, match, leftCells, rowIndex, colIndex, searchTerm, colorClass, sparkle = false) {
-    const card = document.createElement("div");
-    card.className = `p-4 rounded shadow border-l-8 ${colorClass} transition-all duration-200 hover:shadow-xl hover:scale-[1.02] hover:bg-white/50 cursor-pointer ${sparkle ? "sparkle" : ""}`;
+      function containsMonth(text, updatedMonth) {
+        if (!text) return false;
+        const lower = text.toLowerCase();
+        if (lower.includes(updatedMonth)) return true;
 
-    const leftItems = leftCells
-      .reverse()
-      .map(val => `<li>🔎 ${val}</li>`)
-      .join("");
+        const monthMap = {
+          january: '01', february: '02', march: '03', april: '04',
+          may: '05', june: '06', july: '07', august: '08',
+          september: '09', october: '10', november: '11', december: '12'
+        };
+        const monthNum = monthMap[updatedMonth];
+        if (!monthNum) return false;
 
-    card.innerHTML = `
-      <div class="flex justify-between items-center mb-2">
-        <h2 class="text-md font-bold text-gray-800">${sheetName}</h2>
-        <div class="flex flex-col text-right">
-          <p class="text-sm text-gray-800">
-            <strong>Name:</strong> ${match}
-          </p>
-          <p class="text-xs text-gray-600 mb-1">
-            Row ${rowIndex + 2}, Column ${colIndex + 1}
-          </p>
-        </div>
-      </div>
-      <ul class="pl-4 list-disc text-sm text-gray-700">
-        ${leftItems || "<li><em>None found</em></li>"}
-      </ul>
-    `;
-    return card;
-  }
+        // Match formats like 9/4/2025, 2025-04-09, etc.
+        return new RegExp(`[-/]0?${parseInt(monthNum)}[-/]|[-/]${monthNum}[-/]`).test(lower);
+      }
 
-  let cachedData = [];
+      async function fetchSheet(sheetName, range) {
+        const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${encodeURIComponent(sheetName + '!' + range)}?key=${apiKey}`;
+        const res = await fetch(url);
+        if (!res.ok) throw new Error(`Failed to load ${sheetName}`);
+        const json = await res.json();
+        return json.values?.slice(1) || [];
+      }
 
-  document.getElementById("searchBtn").addEventListener("click", async () => {
-    const term = document.getElementById("searchInput").value.trim();
-    const resultsDiv = document.getElementById("results");
-    resultsDiv.innerHTML = "";
+      function getMergedSafeValue(row, colIndex) {
+        for (let r = row; r >= 0; r--) {
+          if (cachedData[r] && cachedData[r][colIndex]) {
+            return cachedData[r][colIndex];
+          }
+        }
+        return "";
+      }
 
-    if (!term) {
-      resultsDiv.innerHTML = `<div class="bg-yellow-100 text-yellow-700 p-3 rounded">Please enter your name ⌛.</div>`;
-      return;
-    }
+      function createCard(sheetName, match, leftCells, rowIndex, colIndex, searchTerm, colorClass, sparkle = false) {
+        const card = document.createElement("div");
+        card.className = `p-4 rounded shadow border-l-8 ${colorClass} transition-all duration-200 hover:shadow-xl hover:scale-[1.02] hover:bg-white/50 cursor-pointer ${sparkle ? "sparkle" : ""}`;
 
-    const lowerTerm = term.toLowerCase();
-    const updatedMonth = getUpdatedMonth();
+        const leftItems = leftCells.reverse().map(val => `<li>🔎 ${val}</li>`).join("");
 
-    for (const { name, range, left, color } of sheetConfigs) {
-      try {
-        cachedData = await fetchSheet(name, range);
-        cachedData.forEach((row, rowIndex) => {
-          if (!row) return;
-          row.forEach((cell, colIndex) => {
-            if (cell?.toLowerCase().includes(lowerTerm)) {
-              const leftData = [];
-              for (let i = 1; i <= left; i++) {
-                const leftCol = colIndex - i;
-                if (leftCol >= 0) {
-                  leftData.push(getMergedSafeValue(rowIndex, leftCol));
+        card.innerHTML = `
+          <div class="flex justify-between items-center mb-2">
+            <h2 class="text-md font-bold text-gray-800">${sheetName} ${sparkle ? "✨" : ""}</h2>
+            <div class="flex flex-col text-right">
+              <p class="text-sm text-gray-800">
+                <strong>Name:</strong> ${match}
+              </p>
+              <p class="text-xs text-gray-600 mb-1">
+                Row ${rowIndex + 2}, Column ${colIndex + 1}
+              </p>
+            </div>
+          </div>
+          <ul class="pl-4 list-disc text-sm text-gray-700">
+            ${leftItems || "<li><em>None found</em></li>"}
+          </ul>
+        `;
+        return card;
+      }
+
+      let cachedData = [];
+
+      document.getElementById("searchBtn").addEventListener("click", async () => {
+        const term = document.getElementById("searchInput").value.trim();
+        const resultsDiv = document.getElementById("results");
+        resultsDiv.innerHTML = "";
+
+        if (!term) {
+          resultsDiv.innerHTML = `<div class="bg-yellow-100 text-yellow-700 p-3 rounded">Please enter your name ⌛.</div>`;
+          return;
+        }
+
+        const lowerTerm = term.toLowerCase();
+        const updatedMonth = getUpdatedMonth();
+
+        for (const { name, range, left, color } of sheetConfigs) {
+          try {
+            cachedData = await fetchSheet(name, range);
+            cachedData.forEach((row, rowIndex) => {
+              if (!row) return;
+              row.forEach((cell, colIndex) => {
+                if (cell?.toLowerCase().includes(lowerTerm)) {
+                  const leftData = [];
+                  for (let i = 1; i <= left; i++) {
+                    const leftCol = colIndex - i;
+                    if (leftCol >= 0) {
+                      leftData.push(getMergedSafeValue(rowIndex, leftCol));
+                    }
+                  }
+
+                  const sparkle = [...leftData, cell].some(text => containsMonth(text, updatedMonth));
+                  const card = createCard(name, cell, leftData, rowIndex, colIndex, term, color, sparkle);
+                  resultsDiv.appendChild(card);
                 }
-              }
-
-              const sparkle = [...leftData, cell]
-                .some(text => text?.toLowerCase().includes(updatedMonth));
-
-              const card = createCard(name, cell, leftData, rowIndex, colIndex, term, color, sparkle);
-              resultsDiv.appendChild(card);
-            }
-          });
-        });
-      } catch (err) {
-        console.error(err);
-        resultsDiv.innerHTML += `<div class="bg-red-100 text-red-700 p-3 rounded">Error loading ${name}</div>`;
-      }
-    }
-  });
-</script>
-
+              });
+            });
+          } catch (err) {
+            console.error(err);
+            resultsDiv.innerHTML += `<div class="bg-red-100 text-red-700 p-3 rounded">Error loading ${name}</div>`;
+          }
+        }
+      });
+    </script>
   </div>
 </body>
 </html>
