--- a/search.html
+++ b/search.html
@@ -83,7 +83,7 @@
       </p>
 
       <p class="mt-2 text-sm text-gray-500 font-normal">
-        Tip: Search using your unique name (e.g. Aki Ai, Reza, dont need full name unless there is another person with same first name), use at your own discretion (pls tell admin not to make last minute changes 🤲). If you see incomplete data that means the main dutysheet is incomplete as well. I welcome any improvement feedbacks.
+        Tip: Search using your unique name (e.g. Aki Ai, Reza, dont need full name unless there is another person with same first name), the duties in the current month will ✨sparkle✨, use at your own discretion (hope admin not to make last minute changes 🤲). If you see incomplete data that means the main dutysheet is incomplete as well. I welcome any improvement feedbacks.
       </p>
 
       <p class="mt-7 text-center text-sm font-semibold shine">
