--- a/search.html
+++ b/search.html
@@ -83,11 +83,11 @@
       </p>
 
       <p class="mt-2 text-sm text-gray-500 font-normal">
-        Tip: Search using your unique name (e.g. Aki Ai, Reza, dont need full name unless there is another person with same first name), the duties in the current month will ✨sparkle✨, use at your own discretion (hope admin not to make last minute changes 🤲). If you see incomplete data that means the main dutysheet is incomplete as well. I welcome any improvement feedbacks.
+        Note: Search using your unique name (e.g. Aki Ai, reza, Oznur instead of Eliza because there is a probie Elizabeth), The duties in the current month will ✨sparkle✨, use at your own discretion (all data is taken from the original duty sheet so hope the admins not to make last minute changes 🤲). If you see incomplete data that means the main dutysheet is incomplete as well. I welcome any improvement feedbacks.
       </p>
 
       <p class="mt-7 text-center text-sm font-semibold shine">
-        An Initiative by Tan Sebastian Poe Ryu© 2 Aristotle
+        an initiative by Tan Sebastian Poe Ryu© 
       </p>
     </footer>
 
