--- a/search.html
+++ b/search.html
@@ -83,7 +83,7 @@
       </p>
 
       <p class="mt-2 text-sm text-gray-500 font-normal">
-        Note: Search using your unique name (e.g. Aki Ai, reza, Oznur instead of Eliza because there is a probie Elizabeth), The duties in the current month will ✨sparkle✨, use at your own discretion (all data is taken from the original duty sheet so hope the admins not to make last minute changes 🤲). If you see incomplete data that means the main dutysheet is incomplete as well. I welcome any improvement feedbacks.
+        Note: Search using your unique name (e.g. Aki Ai, reza, oznur instead of eliza because there is a probie Elizabeth), The duties in the current month will ✨sparkle✨, use at your own discretion (all data is taken from the original duty sheet so hope the admins not to make last minute changes 🤲). If you see incomplete data that means the main dutysheet is incomplete as well. I welcome any improvement feedbacks.
       </p>
 
       <p class="mt-7 text-center text-sm font-semibold shine">
