--- a/search.html
+++ b/search.html
@@ -83,7 +83,7 @@
       </p>
 
       <p class="mt-2 text-sm text-gray-500 font-normal">
-        Note: Search using your unique name (e.g. Aki Ai, reza, oznur instead of eliza because there is a probie Elizabeth), The duties in the current month will ✨sparkle✨, Use at your own discretion (hope the admins not to make last minute changes 🤲). If you see incomplete data that means the main dutysheet is incomplete as well. Suggestions always welcome (and I won’t say no to free coffee).
+        Note: Search using your unique name (e.g. Aki Ai, reza, or oznur instead of eliza because there is a probie Elizabeth). The duties in the current month will ✨sparkle✨, Use at your own discretion. If you see incomplete data that means the main dutysheet is incomplete as well. Suggestions always welcome (and I won’t say no to free coffee).
       </p>
 
       <p class="mt-7 text-center text-sm font-semibold shine">
